--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   connectivity_plus: ^6.1.3
   lottie: ^3.3.1
+  gap: any
 
 dev_dependencies:
   flutter_test:
